--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 								<td>{{restaurant.address}}</td>
 								<td><span class="glyphicon glyphicon-{{restaurant.drive ? 'ok' : 'minus'}}" aria-hidden="true"></span> </td>
 								<td>{{restaurant.phone}}</td>
-								<td style="text-align: center;"><a href=""><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> <a href="" ng-click="delRestaurant(restaurant.id)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
+								<td style="text-align: center;"><a href="" class="edit" ng-click="fillForm(restaurant.id)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> <a href="" ng-click="delRestaurant(restaurant.id)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
 							</tr>
 						</tbody>
 					</table>
@@ -97,7 +97,10 @@
 
 
 	<script type="text/javascript">
-		$(document).ready(function(){
+		$(document).ready(function() {
+    		$(".edit").click(function() {
+       			$("form").removeClass("hidden");
+       		});
     		$("#add").click(function(){
         		$("form").removeClass("hidden");
         		$("#addli").addClass("active");
@@ -107,7 +110,7 @@
         		$("form").addClass("hidden");
         		$("#listli").addClass("active");
         		$("#addli").removeClass("active");
-       	});
+       		});
 	});
 
 		var restaurantMgmtModule = angular.module("restaurantMgmt", ['ngSanitize'])
@@ -137,6 +140,15 @@
 					$scope.restaurants = resp.data;
 				})
 			}
+			$scope.fillForm = function(id) {
+				var form = document.getElementById("addRestaurantForm")
+				$http.get('getRestaurants/'+id).then(function(resp) {
+					form['id'].value = resp.data[0].id;
+					form['name'].value = resp.data[0].name;
+					form['phone'].value = resp.data[0].phone;
+				})
+			}
+			// add gombra való nyomásnál ürüljön a form, különösen az ID! pencilre nyomáskor jelenlen meg a form
 			$scope.delRestaurant = function(id) {
 				$http.delete('/delRestaurant/'+id).then(function(resp) {
 					$scope.restaurants = resp.data;
