--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<!-- Latest compiled and minified CSS & JS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="js/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="js/angular.min.js"></script>
@@ -20,7 +21,7 @@
 					<a href="#" id="list" ng-click="listRestaurants()">List</a>
 				</li>
 				<li id="addli">
-					<a href="#" id="add">Add</a>
+					<a href="#" id="add" ng-click="resetForm()">Add</a>
 				</li>
 			</ul>
 		</div>
@@ -31,10 +32,9 @@
 				<div class="row">
 
 					<h1>List of restaurants</h1>
-					<!-- <a href="#" ng-click="listRestaurants()">List</a> -->
 					<table class="table table-striped table-hover">
 						<thead>
-							<tr> <!-- ng repeat + onlcick load map based on lat/long-->
+							<tr>
 								<th>Name</th>
 								<th>Address</th>
 								<th>Drive</th>
@@ -43,22 +43,21 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr ng-repeat="restaurant in restaurants" > <!-- ng-click="getMap({{restaurant.name}})"-->
+							<tr ng-repeat="restaurant in restaurants">
 								<td><a href="" ng-click="getMap(restaurant.id)">{{restaurant.name}}</a></td>
-								<td>{{restaurant.address}}</td>
+								<td><a href="" ng-click="getMap(restaurant.id)">{{restaurant.address}}</a></td>
 								<td><span class="glyphicon glyphicon-{{restaurant.drive ? 'ok' : 'minus'}}" aria-hidden="true"></span> </td>
 								<td>{{restaurant.phone}}</td>
-								<td style="text-align: center;"><a href="" class="edit" ng-click="fillForm(restaurant.id)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> <a href="" ng-click="delRestaurant(restaurant.id)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
+								<td style="text-align: center;"><a href="" ng-click="fillForm(restaurant.id)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> <a href="" ng-click="delRestaurant(restaurant.id)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
 							</tr>
 						</tbody>
 					</table>
 
 				</div>
 				<div class="row">
-
-					<form id="addRestaurantForm" class="form-horizontal hidden" role="form">
-						<legend>Add new Restaurant</legend>
-						<input type="hidden" name="id">
+					<form id="addRestaurantForm" class="form-horizontal" ng-show="showForm" role="form">
+						<legend>Add / modify Restaurant<a href="" ng-click="showForm = false"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></legend>
+						<input type="text" name="id">
 						<div class="input-group">
 							<span class="input-group-addon" id="sizing-addon1">Name</span>
 							<input type="text" class="form-control"  name="name" placeholder="Name" aria-describedby="sizing-addon1">
@@ -98,9 +97,6 @@
 
 	<script type="text/javascript">
 		$(document).ready(function() {
-    		$(".edit").click(function() {
-       			$("form").removeClass("hidden");
-       		});
     		$("#add").click(function(){
         		$("form").removeClass("hidden");
         		$("#addli").addClass("active");
@@ -127,6 +123,10 @@
 					$scope.map = '<iframe id="map" width="100%" height="400" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCOum7rLqWUpazwTQslGZnd5d7pbZB2uGg&#38;q='+$scope.rest+'&zoom=15"></iframe>';
 				})
 			}
+			$scope.resetForm = function() {
+				var form = document.getElementById("addRestaurantForm").reset();
+				$scope.showForm = true;
+			}
 			$scope.sendForm = function() {
 				var form = document.getElementById("addRestaurantForm")
 				var restaurant = new Object();
@@ -135,21 +135,32 @@
 				restaurant.address = form['zip'].value+', '+form['city'].value+', '+form['street'].value+', '+form['number'].value;
 				restaurant.drive = $scope.formDrive;
 				restaurant.phone = form['phone'].value;
-				console.log(JSON.stringify(restaurant));
-				$http.post('/addRestaurant',JSON.stringify(restaurant)).then(function(resp) {
-					$scope.restaurants = resp.data;
-				})
+				if(restaurant.id == null) {
+					$http.post('/addRestaurant',JSON.stringify(restaurant)).then(function(resp) {
+						$scope.restaurants = resp.data;
+					})
+				}
+				else {
+					$http.put('/modRestaurant/'+restaurant.id,JSON.stringify(restaurant)).then(function(resp) {
+						$scope.restaurants = resp.data;
+					})
+				}
+
 			}
 			$scope.fillForm = function(id) {
 				var form = document.getElementById("addRestaurantForm")
+				$scope.showForm = true;
 				$http.get('getRestaurants/'+id).then(function(resp) {
 					form['id'].value = resp.data[0].id;
 					form['name'].value = resp.data[0].name;
+					form['zip'].value = resp.data[0].address.split(',')[0];
+					form['city'].value = resp.data[0].address.split(',')[1];
+					form['street'].value = resp.data[0].address.split(',')[2];
+					form['number'].value = resp.data[0].address.split(',')[3];
 					form['phone'].value = resp.data[0].phone;
 				})
 			}
-			// add gombra való nyomásnál ürüljön a form, különösen az ID! pencilre nyomáskor jelenlen meg a form
-			// readme.md-t letölteni és berakni a mappába hogy a push menjen
+			
 			$scope.delRestaurant = function(id) {
 				$http.delete('/delRestaurant/'+id).then(function(resp) {
 					$scope.restaurants = resp.data;
