Sass stylesheet modifications.

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 				<div class="row">
 					<form id="addRestaurantForm" class="form-horizontal" ng-show="showForm" role="form">
 						<legend>Add / modify Restaurant<a href="" ng-click="showForm = false"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></legend>
-						<input type="text" name="id">
+						<input type="hidden" name="id">
 						<div class="input-group">
 							<span class="input-group-addon" id="sizing-addon1">Name</span>
 							<input type="text" class="form-control"  name="name" placeholder="Name" aria-describedby="sizing-addon1">
